kubernetes/pushgateway/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: pushgateway

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pushgateway
      app.kubernetes.io/instance: pushgateway
  template:
    metadata:
      name: pushgateway
      labels:
        app.kubernetes.io/name: pushgateway
        app.kubernetes.io/instance: pushgateway
    spec:
      containers:
      - name: pushgateway
        image: prom/pushgateway:v1.11.3@sha256:74fa117cef2d7e383112d25139ff1c2d2e309c35389a9e0554a47136a1482e48
        ports:
        - name: web
          containerPort: 9091
