kubernetes/pushgateway/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: pushgateway
  labels:
    k8s-app: pushgateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  tls:
  - hosts:
    - pushgateway.k.oneill.net
    secretName: pushgateway-tls
  rules:
  - host: pushgateway.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pushgateway
            port:
              number: 9091
